# circuit-examples

./: .README.md.swp  .gitmodules  README  README.md
circom/: adder.circom  dot_product.circom  pot12_0000.ptau
circom-dotproduct/scripts/: build.sh
circom-merkle-proof/: verify-merkle-path.circom
circom-merkle-proof/scripts/: build.sh
circom/scripts/: build.sh  verify-merkle-path.circom
noir-dotproduct/: Nargo.toml  Prover.toml  README.md  Verifier.toml
noir-dotproduct/proofs/: p.proof
noir-dotproduct/src/: main.nr
noir-merkle/: Prover.toml
noir-merkle/proofs/: p.proof
noir-merkle/src/: main.nr
risc0-dotproduct/: README.md
risc0-dotproduct/core/src/: lib.rs
risc0-dotproduct/dotproduct/src/: main.rs
risc0-merkle-proof/: Cargo.toml  README.md
risc0-merkle-proof/core/: Cargo.toml
risc0-merkle-proof/core/src/: lib.rs
risc0-merkle-proof/merkle/: Cargo.toml
risc0-merkle-proof/merkle/src/: main.rs
risc0-merkle-proof/methods/guest/: Cargo.toml
risc0-merkle/core/: Cargo.toml
risc0-merkle/core/src/: merkle.rs
risc0-merkle/host/: Cargo.toml
risc0-merkle/methods/: Cargo.toml  build.rs
risc0-merkle/methods/guest/: Cargo.toml
