[package]
name = "merkle-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version="0.13.0", features = ["derive"] }
merkletree = "0.22.1"
neptune = "8.1.0"
serde = { version = "1.0", features = ["derive"] }
