[package]
name = "waldo-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytemuck = "1.12"
divrem = "1.0.0"
elsa = "1.7"
image = { version = "0.24.5", default-features = false }
merkle_light = "0.4"
merkle_light_derive = "0.4"
risc0-zkp = { version = "0.12", default-features = false }
risc0-zkvm = { version = "0.12", default-features = false, features = ["std"] }
serde = "1.0"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.6"
